--- a/package.json
+++ b/package.json
@@ -3,15 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-     "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
@@ -34,6 +30,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "sitemap-generator-cli": "^6.2.6",
     "tailwindcss": "^4.1.12",
     "vite": "^7.1.2"
   }
